<resources>
    <string name="app_name">Login</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_employee_id">User Name</string>
    <string name="user_login">User Login</string>
    <string name="full_name">Full Name</string>
    <string name="user_email">E-mail Id</string>
    <string name="registration">User Registration</string>
    <string name="hint_re_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="logout">Logout</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="user_registration">UserRegistration</string>
    <string name="current_user">Current User</string>
    <string name="user_list">User List</string>

</resources>